@@ -27,8 +27,14 @@
 		(<?php echo ($wizard->currentPage+1) . '/' . count($wizard->pages); ?>)
 	</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=<?php echo _INSTALL_CHARSET ?>" />
-	<link rel="stylesheet" type="text/css" media="all" href="style.css" />
-	<script type="text/javascript" src="../libraries/prototype/prototype.js"></script>
+<?php
+	if ( defined('_ADM_USE_RTL') && _ADM_USE_RTL ){
+echo '<link rel="stylesheet" type="text/css" media="all" href="style_rtl.css" />';
+	   } else {
+echo '<link rel="stylesheet" type="text/css" media="all" href="style.css" />';
+           }
+?>
+		<script type="text/javascript" src="../libraries/prototype/prototype.js"></script>
 	<script type="text/javascript">
 	function showHideHelp( butt ) {
 		butt.className = ( butt.className == 'on' ) ? 'off': 'on';
