@@ -67,6 +67,7 @@ Unreleased : ImpressCMS 1.1 "???" Alpha
 - Added : Option in System Preference to Select truncated url's last characteres length (stranger)
 - Added : Ability to use theme_rtl.html for languages with a right to left style. (stranger)
 - Added : Use of theme.php in language files for an easier use of smartys in themes instead of hardcoded texts. (stranger)
+- Added : RTL to install process. (stranger)
 
 - Improved : The pm form to use the selected editor. (real_therplima)
 - Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
